--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/sboozy/MovieUserCrudApp#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.9",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "pg-promise": "^8.4.0"
   }
 }
