--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.3",
     "pg-promise": "^8.4.0"
