--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   "homepage": "https://github.com/sboozy/MovieUserCrudApp#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.3",
     "pg-promise": "^8.4.0"
+  },
+  "engines": {
+    "node": "9.8.0",
+    "npm": "5.6.0"
   }
 }
